<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_KhoanThu"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_KhoanThu" />
        <item
            android:id="@+id/nav_KhoanChi"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_KhoanChi" />
        <item
            android:id="@+id/nav_ThongKe"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_ThongKe" />
    </group>

    <item android:title="Giới Thiệu">
        <menu>
            <item
                android:id="@+id/nav_GioiThieu"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_GioiThieu" />
            <item
                android:id="@+id/nav_Thoat"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_Thoat" />
        </menu>
    </item>

</menu>
